--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -14,10 +14,14 @@
         <item name="android:colorBackground">@color/colorPrimary</item>
     </style>
 
-    <style name="MainTheme" parent="AppTheme">
+    <style name="FullscreenTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:splitMotionEvents">false</item>
         <item name="android:windowEnableSplitTouch">false</item>
+        <item name="android:windowFullscreen">true</item>
         <item name="android:windowAnimationStyle">@null</item>
+        <!-- Match ActivitySplash's background color when restarting the app -->
+        <item name="android:colorBackground">@color/colorPrimary</item>
+        <item name="android:windowLayoutInDisplayCutoutMode" tools:targetApi="28">never</item>
     </style>
 
 </resources>
