--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -44,7 +44,7 @@
         app:layout_constraintGuide_percent="0.669014084507042" />
 
     <TextView
-        android:id="@+id/txt_title_e2"
+        android:id="@+id/txt_title_main"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
@@ -79,7 +79,7 @@
         app:layout_constraintWidth_percent="0.825" />
 
     <TextView
-        android:id="@+id/txt_no_image_e2"
+        android:id="@+id/txt_no_image_main"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
